bug fix for form submit button ios

--- a/apps/fretonator-web/src/app/pages/contact/contact-index/contact-index.component.scss
+++ b/apps/fretonator-web/src/app/pages/contact/contact-index/contact-index.component.scss
@@ -120,7 +120,8 @@
   @include hard_button_base();
   margin-top: pxToRem($grid-unit * 6);
   margin-bottom: pxToRem($grid-unit * 3);
-
+  -webkit-appearance: none;
+  
   &:disabled {
     opacity: 0.5;
   }
